--- a/Source/Makefile-Dual
+++ b/Source/Makefile-Dual
@@ -6,13 +6,14 @@
 # Copyright: (c) 2008 by OBJECTIVE DEVELOPMENT Software GmbH
 # License: GNU GPL v2 (see License.txt), GNU GPL v3 or proprietary (CommercialLicense.txt)
 
-DEVICE  = atmega8
-F_CPU   = 12000000	# in Hz
-FUSE_L  = 0xff
-FUSE_H  = 0xc9
-AVRDUDE = avrdude -c usbasp -p $(DEVICE) # edit this line for your programmer
+DEVICE   = atmega8
+F_CPU    = 12000000	# in Hz
+FUSE_L   = 0xff
+FUSE_H   = 0xc9
+AVRDUDE  = avrdude -c usbasp -p $(DEVICE) # edit this line for your programmer
 
-CFLAGS  = -Iusbdrv -I. -DDEBUG_LEVEL=0 -DDUAL_JOYDIVISION
+#CFLAGS   = -Iusbdrv -I. -DDEBUG_LEVEL=0 -DDUAL_JOYDIVISION -DTHEC64
+CFLAGS   = -Iusbdrv -I. -DDEBUG_LEVEL=0 -DDUAL_JOYDIVISION
 OBJECTS  = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o
 JOY_OBJ  = $(OBJECTS) joystick.o
 CD32_OBJ = $(OBJECTS) cd32.o
