Updated joystick firmware to work with latest THEC64 and also the new A500 mini

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -14,6 +14,7 @@ AVRDUDE  = avrdude -c usbasp -p $(DEVICE) # edit this line for your programmer
 
 #CFLAGS options : -DEDUARANA = Use this flag to build a firmware compatible with Edu Aranas joystick adapter - 
 #CFLAGS options : -DTHEC64 = Using this if you would like to make the HID device compatible with the THEC64 emulator/computer
+#CFLAGS options : -DTHEA500 = Using this if you would like to make the HID device compatible with the THEA500 mini emulator/computer
 
 CFLAGS   = -Iusbdrv -I. -DDEBUG_LEVEL=0
 OBJECTS  = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o
