--- a/Source/Makefile-Dual
+++ b/Source/Makefile-Dual
@@ -14,6 +14,7 @@ AVRDUDE  = avrdude -c usbasp -p $(DEVICE) # edit this line for your programmer
 
 #CFLAGS options : -DDUAL_JOYDIVISION = Used for enable the second port on the JoyDivision adapter 
 #CFLAGS options : -DTHEC64 = Using this if you would like to make the HID device compatible with the THEC64 emulator/computer
+#CFLAGS options : -DTHEA500 = Using this if you would like to make the HID device compatible with the THEA500 mini emulator/computer
 
 CFLAGS   = -Iusbdrv -I. -DDEBUG_LEVEL=0 -DDUAL_JOYDIVISION
 OBJECTS  = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o
